test/testDeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: testsvc
  namespace: test
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  - port: 443
    name: https
    targetPort: 4443
  selector:
    app: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testdep
  namespace: test
spec: 
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:

      containers:
      - name: test
        image: jonas27test/goserver:v0.0.4
        ports:
        - name: http
          containerPort: 8080
        - name: https 
          containerPort: 4443
        volumeMounts:
          - mountPath: /static
            name: test-storage
          # - mountPath: "/cert/"
          #   name: test-tls
          #   readOnly: true
      volumes:
      - name: test-storage
        hostPath:
          path: "/volumes/test"
      - name: test-tls
        secret:
          secretName: jonas-server-tls
      restartPolicy: Always
EOF
